--- a/HalloAppClip/de.lproj/Localizable.strings
+++ b/HalloAppClip/de.lproj/Localizable.strings
@@ -58,6 +58,21 @@
 /* Title for popup that appears when user tries to register invalid number */
 "registration.invalidphone" = "Ups!";
 
+/* Popup that appears when user tries to register a number with invalid country code */
+"registration.invalidphone.invalidCountryCode" = "Die eingegebene Ländervorwahl ist ungültig. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a number with invalid length */
+"registration.invalidphone.invalidLength" = "Die Länge der eingegebenen Handynummer ist ungültig. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a landline number */
+"registration.invalidphone.lineTypeFixed" = "Die eingegebene Telefonnummer ist keine Handynummer. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a number with unknown line type */
+"registration.invalidphone.lineTypeOther" = "Die eingegebene Telefonnummer ist keine Handynummer. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a VoIP number */
+"registration.invalidphone.lineTypeVoip" = "Die eingegebene Telefonnummer ist keine Handynummer. Bitte noch einmal prüfen.";
+
 /* Popup that appears when user tries to register invalid number */
 "registration.invalidphone.only" = "Die eingegebene Handynummer ist ungültig. Bitte prüfe die Nummer und versuche es noch einmal.";
 
