--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -808,9 +808,6 @@
 /* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.title" = "Lade Freunde zu deiner Gruppe ein";
 
-/* Indicates number of new posts on groups grid */
-"group.grid.n.posts" = "group.grid.n.posts";
-
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "Per Link zur Gruppe einladen";
 
@@ -873,6 +870,9 @@
 
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Für Gruppen-Info hier tippen";
+
+/* Tag for new posts in groups grid */
+"groupGrid.newPostIndicator" = "neu";
 
 /* More info menu item */
 "groupGridHeader.moreInfo" = "Mehr Informationen";
@@ -1428,6 +1428,21 @@
 
 /* Title for popup that appears when user tries to register invalid number */
 "registration.invalidphone" = "Ups!";
+
+/* Popup that appears when user tries to register a number with invalid country code */
+"registration.invalidphone.invalidCountryCode" = "Die eingegebene Ländervorwahl ist ungültig. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a number with invalid length */
+"registration.invalidphone.invalidLength" = "Die Länge der eingegebenen Handynummer ist ungültig. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a landline number */
+"registration.invalidphone.lineTypeFixed" = "Die eingegebene Telefonnummer ist keine Handynummer. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a number with unknown line type */
+"registration.invalidphone.lineTypeOther" = "Die eingegebene Telefonnummer ist keine Handynummer. Bitte noch einmal prüfen.";
+
+/* Popup that appears when user tries to register a VoIP number */
+"registration.invalidphone.lineTypeVoip" = "Die eingegebene Telefonnummer ist keine Handynummer. Bitte noch einmal prüfen.";
 
 /* Popup that appears when user tries to register invalid number */
 "registration.invalidphone.only" = "Die eingegebene Handynummer ist ungültig. Bitte prüfe die Nummer und versuche es noch einmal.";
