--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -379,6 +379,9 @@
 /* Alert title when missing microphone access */
 "chat.mic.access.denied.title" = "Не удалось получить доступ к микрофону";
 
+/* cta label for creating a new group chat */
+"chat.new.group.label" = "Новый групповой чат";
+
 /* Text below the contact's name when the contact is online in the Chat Screen */
 "chat.online.label" = "онлайн";
 
@@ -805,9 +808,6 @@
 /* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.title" = "Пригласите друга в свою группу";
 
-/* Indicates number of new posts on groups grid */
-"group.grid.n.posts" = "group.grid.n.posts";
-
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "Пригласить в группу по ссылке";
 
@@ -870,6 +870,9 @@
 
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Коснитесь здесь, чтобы прочесть информацию о группе";
+
+/* Tag for new posts in groups grid */
+"groupGrid.newPostIndicator" = "новый";
 
 /* More info menu item */
 "groupGridHeader.moreInfo" = "Подробнее";
@@ -1180,6 +1183,9 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment.5" = "%1$@, %2$@, %3$@ и другие поделились новыми моментами";
 
+/* New moment screenshot notification text to be shown to the user. */
+"notification.moment.screenshot" = "%@ сделал скриншот вашего момента";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
@@ -1423,6 +1429,21 @@
 /* Title for popup that appears when user tries to register invalid number */
 "registration.invalidphone" = "Незадача!";
 
+/* Popup that appears when user tries to register a number with invalid country code */
+"registration.invalidphone.invalidCountryCode" = "Введенный вами номер телефона содержит неверный код страны. Пожалуйста, перепроверьте.";
+
+/* Popup that appears when user tries to register a number with invalid length */
+"registration.invalidphone.invalidLength" = "Введенный номер телефона имеет недопустимую длину. Пожалуйста, перепроверьте.";
+
+/* Popup that appears when user tries to register a landline number */
+"registration.invalidphone.lineTypeFixed" = "Введенный номер телефона не является номером мобильного телефона. Пожалуйста, перепроверьте.";
+
+/* Popup that appears when user tries to register a number with unknown line type */
+"registration.invalidphone.lineTypeOther" = "Введенный номер телефона не является номером мобильного телефона. Пожалуйста, перепроверьте.";
+
+/* Popup that appears when user tries to register a VoIP number */
+"registration.invalidphone.lineTypeVoip" = "Введенный номер телефона не является номером мобильного телефона. Пожалуйста, перепроверьте.";
+
 /* Popup that appears when user tries to register invalid number */
 "registration.invalidphone.only" = "Вы ввели неправильный номер телефона. Пожалуйста, перепроверьте его.";
 
@@ -1464,6 +1485,9 @@
 
 /* Text shown to instruct using a QR code for joining a group */
 "scan.to.join.group.using.qr.code" = "Чтобы присоединиться, отсканируйте этот QR-код камерой телефона.";
+
+/* Title that indicates that someone took a screenshot. */
+"screenshot.title" = "Скриншот";
 
 /* Text placed on the blurred overlay of a secret post. */
 "secret.post.entice" = "%@ поделился моментом";
@@ -1608,6 +1632,9 @@
 
 /* Instructions for enabling notifications permissions */
 "settings.notifications.disabled.instructions" = "Пожалуйста, включите уведомления в настройках.";
+
+/* Settings > Notifications: label for the toggle that turns new moment notifications on or off. */
+"settings.notifications.moments" = "Моменты";
 
 /* Settings > Notifications: label for the toggle that turns new post notifications on or off. */
 "settings.notifications.posts" = "Посты";
