--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -151,6 +151,9 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment.5" = "%1$@, %2$@, %3$@ и другие поделились новыми моментами";
 
+/* New moment screenshot notification text to be shown to the user. */
+"notification.moment.screenshot" = "%@ сделал скриншот вашего момента";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
